result.deployment.yaml
# Version API
apiVersion: apps/v1
# Define this file as a Deployment
kind: Deployment
# Description of the Deployment
metadata:
  name: result
  namespace: default
spec:
  # Number of replicas
  replicas: 2
  # Select the pods associated with this service
  selector:
    matchLabels:
      app: result
  # Define the template for the pods
  template:
    metadata:
      labels:
        app: result
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - k3d-cluster-tdop-agent-1
                    - k3d-cluster-tdop-agent-0
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128M"
      restartPolicy: Always
